# hubogo-note

./: .gitignore  README.md  TODO_FUTURE.md  build-tauri.bat  index.html  main.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
docs/: index.html
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AboutView.jsx  CalendarView.jsx  CategoryForm.jsx  PriorityView.jsx  Sidebar.jsx  TaskDetailModal.jsx  TaskForm.jsx  TaskItem.jsx  TaskList.jsx  TaskStatusView.jsx  TitleBar.jsx  UpdateNotification.jsx  WhatsNewDialog.jsx
src/database/: db.js
src/pages/: Statistics.jsx
src/store/: useStore.js
src/utils/: analytics.js  backup.js  changelog.js  i18n.js  notifications.js  priorityEngine.js  updateChecker.js
