[package]
name = "sticky-task-manager"
version = "1.0.5"
description = "Ứng dụng quản lý công việc Sticky Note cho Windows 11"
authors = ["User"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
